--- a/ponder/team04.html
+++ b/ponder/team04.html
@@ -223,15 +223,16 @@
                 separate file that we can load in with AJAX.
               </p>
               <p>
-                Create another directory called <kbd>partials</kbd> and create
-                two files in it: <kbd>header.html</kbd> and
-                <kbd>footer.html</kbd>. Then copy the html from
-                <em>inside</em> of the header and footer elements from the
-                src/index.html page into the respective file. We should then add
-                an id to the header and footer elements in index. In the end for
-                the header your code should look something like this (don't just
-                copy this code! Your code might have changes to it that are not
-                represented here. Copy the code out of your index.html file!):
+                Create another directory called <kbd>partials</kbd> (make sure
+                you put this in the <kbd>src</kbd> directory) and create two
+                files in it: <kbd>header.html</kbd> and <kbd>footer.html</kbd>.
+                Then copy the html from <em>inside</em> of the header and footer
+                elements from the src/index.html page into the respective file.
+                We should then add an id to the header and footer elements in
+                index. In the end for the header your code should look something
+                like this (don't just copy this code! Your code might have
+                changes to it that are not represented here. Copy the code out
+                of your index.html file!):
               </p>
               <pre><code class="lang-markup">
 &lt;!-- header.html --&gt;
