--- a/prepare/week06.html
+++ b/prepare/week06.html
@@ -45,6 +45,16 @@
             >.
           </li>
           <li>
+            Watch
+            <a
+              href="https://www.youtube.com/watch?v=GWJhE7Licjs"
+              target="_blank"
+              rel="noreferrer"
+              >Using FormData effectively (13min)</a
+            >.
+          </li>
+
+          <li>
             Read all of
             <a
               href="https://developer.mozilla.org/en-US/docs/Learn/Forms/Form_validation"
