--- a/teacher/week06.html
+++ b/teacher/week06.html
@@ -21,27 +21,151 @@
         <hr />
         <h2>Overview</h2>
         <p>
-          No Team activity for this week. The students should spend almost all
-          of their time working on their projects.
+          The reading this week was on forms. The students should also have
+          gotten together with the students in the backend class (if you are
+          doing the joint project) and have started thinking about project
+          ideas. Help them to navigate scope!
         </p>
 
         <h2>Meeting Time</h2>
 
         <p>
-          This weeks meeting might be short. I would use it entirely for student
-          questions if they bring them. Help them to finish their projects. Let
-          them know your availability for meeting one on one with any of them
-          that need help.
+          This weeks demo should review custom request headers, forms, and
+          making POST requests instead of the simple GETs we have been doing. We
+          do need some sort of a backend to do this though...this will require
+          some special setup...see below
         </p>
-        <p>
-          One other topic you may cover would be options for viewing their apps
-          on a mobile device. Review how to setup github pages since many
-          students are using it as a repository. You could also show them how to
-          lookup IP addresses to make sure their computer and phone are on the
-          same network, and using a tool like LiveServer in VS Code or the
-          Brackets editor for a webserver connect the phone browser to the
-          computer.
-        </p>
+        <ol>
+          <li>
+            We need a backend to make out POST requests to. We can use
+            <kbd>json-server</kbd> for this. Have the students create a
+            directory for this week's demo. Inside of that create a
+            <kbd>server</kbd> directory. Navigate to the directory in the
+            terminal and type
+            <pre><code class="lang-bash">npm init -y</code></pre>
+            to create a new node based project. Then type
+            <pre><code class="lang-bash">npm install --save-dev json-server</code></pre>
+            Finally open the <kbd>package.json</kbd> file and add this line to
+            the <kbd>scripts</kbd> section:
+            <pre><code class="lang-json"
+              >"start": "json-server --watch ./database.json"</code
+            ></pre>
+          </li>
+          <li>
+            Create one more file in the <kbd>server</kbd> directory:
+            <kbd>database.json</kbd> Then add the following line in that file:
+            <kbd>{ { "recipes": [] }</kbd>
+          </li>
+          <li>
+            Because the LiveServer extention watches the project directory for
+            changes to know when to reload, this database file will cause
+            problems for us unless we ignore it since it will get changed each
+            time we POST something to our server. Have the students type
+            <code>cmd/ctrl-shift-p</code> then enter "open settings". They are
+            looking for the "Preferences: Open Settings (UI)" option. Select it
+            then goto "Extentions->Live Server Config->Settings: Ignore Files.
+            Then click on the "Edit in settings.json". Add a line to ignore
+            .json files in the server directory. It should look like this when
+            they are done:
+            <pre><code class="lang-json">"liveServer.settings.ignoreFiles": [
+    "**/server/*.json",
+    ".vscode/**",
+    "**/*.scss",
+    "**/*.sass",
+    "**/*.ts"
+]</code></pre>
+          </li>
+          <li>
+            Start up our server by making sure you are in the
+            <kbd>server</kbd> directory in the command line and typing
+            <pre><code class="lang-bash">npm run start</code></pre>
+            Remind the students that to end this process they should click in
+            the command line to focus it...then type 'ctrl-c'.
+          </li>
+          <li>
+            Up a level from the <kbd>server</kbd> directory create a few more
+            files: index.html, main.js, DataService.js. Add some HTML to the
+            index.html file...and a script element to link it to main.js
+          </li>
+          <li>
+            Open DataService.js and create and export a class
+            <code>export default class DataService</code>. Pass into the
+            constructor the endpoint the instance will be used for. Create two
+            methods: <code>getData()</code>, and <code>postData(data)</code> We
+            will code up the post one first since otherwise there will be
+            nothing to get.
+          </li>
+          <li>
+            Set a variable at the top of our module for the baseUrl of our
+            server...we could also re-use our convertToJson method
+            <pre><code class="lang-js">
+const baseUrl = 'http://localhost:3000/';
+async function convertToJson(res) {
+    const data = await res.json();
+    if (res.ok) {
+      return data
+    } else {
+      throw { name: 'servicesError', message: data };
+    }
+}</code></pre>
+          </li>
+          <li>
+            Talk about doing POSTs. We will need to set some custom request
+            options. Below is a sample:
+            <pre><code class="lang-js">const options = {
+    method: 'POST',
+    headers: {
+        'Content-Type': 'application/json'
+    },
+    body: JSON.stringify(data)
+}
+const results = await fetch(baseUrl + this.endpoint, options).then(convertToJson);
+return results;</code></pre>
+          </li>
+          <li>
+            Test the post method...check <kbd>database.json</kbd> to make sure
+            the data is there. Then move on to the
+            <code>getData()</code> method.
+          </li>
+          <li>
+            Once getData is working move into the index.html file...create a
+            form, add fields for name, description, and category. Talk about
+            HTML validation...what we get for free, and add a submit button.
+          </li>
+          <li>
+            In <kbd>main.js</kbd> add a listener to the form. Talk about
+            preventDefault, we are submitting the form through AJAX so we don't
+            want the default behavior to happen.
+          </li>
+          <li>
+            You might mention that you can manually access the HTML form
+            validation tools in JS: <code>form.checkValidity()</code> and
+            <code>form.reportValidity()</code>
+          </li>
+
+          <li>
+            What do we send to the server? We could go through and
+            "document.querySelector" out all the form fields and build our
+            object by hand...or we can leverage
+            <kbd>FormData</kbd>. FormData creates a nice name:value pairing of
+            each input in our form. Advantage: will easily capture all of the
+            form fields and does the heavy lifting for you if you are uploading
+            files through your form, disadvantage: not all servers want
+            FormData. Ours in fact wants JSON...but it is pretty easy to convert
+            it for simple forms.
+            <pre><code class="lang-js">
+function formDataToJSON(formElement) {    
+    let formData = new FormData(formElement);
+    // Object.fromEntries creates a new object made from an iterable list like an Array or Map
+    // Object.entries takes an object and converts it into an Array that is iterable.
+    const converted = Object.fromEntries(formData.entries());
+    // if we have radios or checkboxes which share the same name
+      converted.category = formData.getAll("category");
+    return converted;
+}
+          </code></pre>
+          </li>
+        </ol>
       </main>
       <!-- end #article -->
     </div>
