--- a/teacher/week06.html
+++ b/teacher/week06.html
@@ -35,6 +35,14 @@
           do need some sort of a backend to do this though...this will require
           some special setup...see below
         </p>
+        <p>
+          ...and here is a link to the project...<a
+            href="https://github.com/byui-cit/wdd330/tree/main/examples/blog"
+            target="_blank"
+            >simple blog</a
+          >. The link this week is to the repo...it won't function if the server
+          part is not running...
+        </p>
         <ol>
           <li>
             We need a backend to make out POST requests to. We can use
