--- a/teacher/week06.html
+++ b/teacher/week06.html
@@ -17,7 +17,7 @@
         </div>
       </header>
       <main>
-        <h1>Instructor Preparation</h1>
+        <h1>W6 Instructor Preparation</h1>
         <hr />
         <h2>Overview</h2>
         <p>
@@ -45,7 +45,7 @@
         </p>
         <ol>
           <li>
-            We need a backend to make out POST requests to. We can use
+            We need a backend to make our POST requests to. We can use
             <kbd>json-server</kbd> for this. Have the students create a
             directory for this week's demo. Inside of that create a
             <kbd>server</kbd> directory. Navigate to the directory in the
