--- a/teacher/week08.html
+++ b/teacher/week08.html
@@ -17,18 +17,22 @@
         </div>
       </header>
       <main>
-        <h1>Instructor Preparation</h1>
+        <h1>W8 Instructor Preparation</h1>
         <hr />
         <h2>Overview</h2>
         <p>
-          The team activity for this week has the students using a 3rd party
-          API. We will be pulling data from
-          <a href="http://swapi.dev" target="_blank" rel="noreferrer"
-            >swapi.dev</a
-          >. They will need to remember how to deal with the promises that Fetch
-          will return. The solution is given with promises and with async/await.
+          The team activity for this week is a continuation of last week. The
+          students should have successfully submitted an order to the server,
+          but we did not handle the response, or deal with validation to make
+          sure the user gives us good information.
         </p>
-
+        <p>
+          The reading for this week introduces JSON Web Tokens (JWT). The team
+          activity next week will address authentication.
+        </p>
+        <p>
+          Remind the students that their project proposals are due this week.
+        </p>
         <p>
           Encourage the students also to record their questions while reading
           and give them to you to be addressed.
@@ -36,20 +40,14 @@
         <h2>Meeting Time</h2>
 
         <p>
-          The reading for this week introduces CSS transitions and animations.
-          An example I often use is to start with
-          <a
-            href="https://codepen.io/matkat/pen/EKaNZg"
-            target="_blank"
-            rel="noreferrer"
-            >these boxes</a
-          >
-          and will change them (transform, size shape color, location) with
-          transitions to demo the basics. I'll finish with a bouncing ball or
-          make a box go around the content div (slide corner to corner all the
-          way around). Then you might build something like this:
-          <a href="../examples/poketest.html" target="_blank">PokeApi Demo</a>
-          to review Ajax and add the sliding transition effect.
+          For your meeting it might be helpful to grab a Trello card from the
+          SleepOutside project and work on it together with the students. Model
+          especially the planning phase as students often struggle getting
+          started. The cards for sprint 3 are more complex.
+        </p>
+        <p>
+          Alternatively you could model requesting a token with a
+          username/password and using it in requests.
         </p>
       </main>
       <!-- end #article -->
