--- a/teacher/week10.html
+++ b/teacher/week10.html
@@ -17,45 +17,21 @@
         </div>
       </header>
       <main>
-        <h1>Instructor Preparation</h1>
+        <h1>W10 Instructor Preparation</h1>
         <hr />
         <h2>Overview</h2>
         <p>
-          The team activity for this week tries to pull together most of what we
-          have learned this semester by building an app that will get the
-          current location, then pull a list of earth quakes within a certain
-          distance of that location from an API and displays them.
+          The rest of the semester will be spent with the students completing
+          their group projects. There will be no more team activities, and only
+          light readings.
         </p>
 
-        <p>
-          Remind students that they should be working on their personal
-          challenges. The only assignment this week is the team activity (~1hr)
-          so they should plan on spending the rest of their time working on
-          their projects. (~7-8 hrs).
-        </p>
         <h2>Meeting Time</h2>
 
+        <p>This week you could use your meeting for questions on projects.</p>
         <p>
-          This week you could use your meeting for questions on projects. You
-          should also spend a few minutes talking about using fetch to put/post.
-          We will need to send in some request options in this case and cannot
-          rely on the defaults. You could work towards something like this:
-          <a
-            href="https://github.com/byui-cit/cit261/tree/gh-pages/examples/week10"
-            >USDA search example</a
-          >. You will need to get an API key from
-          <a
-            href="https://fdc.nal.usda.gov/index.html"
-            target="_blank"
-            rel="noreferrer"
-            >USDA Food Data Central</a
-          >, then add a file called <kbd>keys.js</kbd> to that project with your
-          api key in it.
-        </p>
-        <p>
-          Great opportunity to pull up the reading on Fetch from this week to
-          talk about using a settings object to customize a fetch call, and of
-          trying to make sense of API documentation. Also discuss using the
+          This could be a great opportunity to talk about trying to make sense
+          of API documentation. Also discuss using the
           <kbd>.gitignore</kbd> file to protect things like API keys.
         </p>
       </main>
