--- a/teacher/week09.html
+++ b/teacher/week09.html
@@ -17,38 +17,24 @@
         </div>
       </header>
       <main>
-        <h1>Instructor Preparation</h1>
+        <h1>W9 Instructor Preparation</h1>
         <hr />
         <h2>Overview</h2>
         <p>
-          The team activity for this week borrows from the Javascript30 course
-          again. We will get more experience with events and transitions by
-          building a simple key driven drumset.
+          The team activity for this week will have the students create a simple
+          Administrative section of the site that will require authentication to
+          access.
         </p>
 
         <p>
-          Remind students that next week we will begin working on the second set
-          of challenges. We will spend the rest of the semester working on
-          these. They should submit their idea(s) this week in the form of a
-          simple project proposal.
+          Remind students that next week we will begin working on their
+          projects. This is the last week of working with the SleepOutside.
         </p>
         <h2>Meeting Time</h2>
 
         <p>
-          We are getting close to the second set of challenges, so for your
-          meeting time plan to spend some time addressing challenge ideas with
-          students. I would also take the opportunity to talk about modern
-          frontend workflow. You can use this activity from the weekly readings
-          to drive the discussion:
-          <a href="../resources/workflow.html" target="_blank"
-            >modern workflow</a
-          >.
-        </p>
-        <p>
-          The example provides a simple project boilerplate that uses a package
-          manager (NPM), a bundler (Parcel), and a task manager (NPM). There is
-          a link in Ilearn to that resource as well. (Bottom of the Modules list
-          in 'Stuff')
+          The readings introduced several of the HTML APIs, and Canvas. It could
+          be fun to model several of those. (Quakes demo?)
         </p>
       </main>
       <!-- end #article -->
