--- a/ponder/team01.html
+++ b/ponder/team01.html
@@ -29,10 +29,12 @@
         <p>
           Complete the following assignment as a team. Designate one team member
           as the "main driver" and collaborate on their copy of the code.
+          Normally the driver should be the only one entering code, the rest of
+          the team should direct the driver and tell them what to write. This
+          week will be an exception to that though in a couple of spots.
           Everyone on the team should be actively engaged in writing the code
-          and contributing to the solution. Once the solution is working, make
-          sure that everyone on the team gets a copy of the code. Each week let
-          someone else be the "main driver" of the coding.
+          and contributing to the solution. Each week let someone else be the
+          "main driver" of the coding.
         </p>
         <p>
           It will be very helpful if you have completed the Sitepoint course on
