--- a/resources/syllabus-outside.html
+++ b/resources/syllabus-outside.html
@@ -21,7 +21,7 @@
           help the student learn to do this without the aid of third-party
           frameworks or libraries. Because of this, the course focuses on how to
           solve larger, ill-structured business problems by designing and
-          creating web applications to be run on mobile devices.
+          creating web applications.
         </p>
         <h2>Prerequisites</h2>
         <p>
@@ -189,8 +189,15 @@
           Page Web applications. 
         </p>
         <p>
-          For weeks 10-14 of the course you will further apply what you have learned by designing and completing a project of your choosing. This project can be individual or team.
+          For weeks 10-14 of the course you will further apply what you have learned by designing and completing a project of your choosing. This project will be with your team.
         </p>
+        <p>During the first nine weeks your time will be spent on a weekly reading assignment, a weekly Team activity, and additional tasks that add more functionality to our site that are found in a Trello board each team will make a copy of. Each person in the team should have a goal of completing at least one card (task) per week.</p>
+        <ol>
+          <li>Reading assignment: 1-2hrs</li>
+          <li>Team activity: ~2hrs (If face-to-face 1hr of this will be classtime)</li>
+          <li>Trello Cards: ~3hrs</li>
+          <li>Professor led instruction: ~1-1.5hrs (either scheduled class or a weekly recorded office hour if online)</li>
+        </ol>
 
         
         <h2>Outcomes</h2>
