--- a/teacher/introduction.html
+++ b/teacher/introduction.html
@@ -21,11 +21,10 @@
         <hr />
         <h2>Course outline</h2>
         <p>
-          The course is broken up into two units. Unit one is weeks 1-6 and
-          consists of 4 weeks of reading and completing exercises from the book,
-          then a two week application where the students will complete a self
-          selected small coding project. They should plan on about 15 hours for
-          their project spent over weeks 5 and 6.
+          The course attempts to simulate working on a real project in a real
+          frontend team. The first 9 weeks will be spent adding features and
+          fixing bugs on a project called SleepOutside, a simple outdoor gear
+          retail site.
         </p>
 
         <h3>Team Activities</h3>
@@ -33,37 +32,50 @@
           During most weeks the students will have a required team activity that
           they should complete in a peer programming style. You can decide
           whether to form the groups yourself, or allow the students to self
-          select. They should plan on a 1 hour block per week where they will
-          need to meet to complete the activity. I recommend 3-4 students per
-          group. Most of the points for these activities come from
-          participation...only about 10% or so is for completion.
+          select. I recommend 3-4 students per group. Most of the points for
+          these activities come from participation...only about 10% or so is for
+          completion.
         </p>
         <p>
-          If you decide you form the groups for the students, here are some
-          resources to help with that:
+          Make sure to stress to them that peer programming means that one
+          student drives...they are on the editor typing code. The rest of the
+          team tells them what to type. Most of the input should come from those
+          NOT typing.
+        </p>
+        <p>
+          The team activities are used to make major changes to the application.
+          The students will also be given a Trello board full of cards that fix
+          bugs and add smaller bits of functionality. Teams should have the goal
+          of completing at least one card per person in the team per week.
+          Students should attempt the cards individually, but should feel
+          welcome to reach out to their teammates for help as needed.
+        </p>
+        <p>So a typical week should have the following:</p>
+        <ol>
+          <li>Reading assignment: 1-2hrs</li>
+          <li>
+            Team activity: ~2hrs (If face-to-face 1hr of this will be classtime)
+          </li>
+          <li>Trello Cards: ~3hrs</li>
+          <li>
+            Professor led instruction: ~1-1.5hrs (either scheduled class or a
+            weekly recorded office hour if online)
+          </li>
+        </ol>
+
+        <h3>Final project</h3>
+        <p>
+          Part two is weeks 10-14 and will be spent building a new application
+          that the students have planned earlier in the course. There will still
+          be readings, but no more team activities.
+        </p>
+        <p>
+          You may choose to coordinate with a CSE 341 instructor to have the
+          students work across courses. This course would build the frontend of
+          an application, and the students from the other course would build the
+          backend.
         </p>
 
-        <h3>Unit 2</h3>
-        <p>
-          Unit two is weeks 7-14 and is made up of another 3 weeks of reading
-          and exercises and then 4 weeks of application. The students again will
-          select an application that they would like to build. They should spend
-          more time preparing a project plan this time however. If they did not
-          get everything done on the first coding challenge that they wanted to
-          and there is enough left to do I think it would be fine to allow them
-          to continue the unit one project into unit 2. That is up to you. They
-          should plan on 30 hours for this project.
-        </p>
-        <p>
-          On the reading weeks remind the students often that if they only read
-          through the material once and then move on they will not gain the
-          understanding they need and will struggle in other parts of the
-          course. They should not look at the assigned readings and say "Great!
-          Two chapters to read...I can finish this week's work in a hour or two
-          and move on!" They should instead plan on reading and re-reading,
-          completing exercises, looking for alternative sources on the material,
-          etc until they have mastered the topic(s).
-        </p>
         <h2>Instructor Time expectations</h2>
         <p>
           The course is designed to minimize the amount of time you spend
@@ -71,18 +83,31 @@
           attention to students that need it. Each week the students are
           required to turn in either notes or worked exercises. You should
           review those with the goal of extracting questions to address with the
-          class. They will also submit a weekly report of status. Again, review
-          these looking for students whom you may need to reach out to. I would
-          grade both of these on completion. Feel free to dock a few points on
-          the notes if you feel they are putting in minimal effort.
+          class. Encourage your students to include their questions in their
+          notes!
+        </p>
+        <p>
+          They will also either arrange a meeting once a week between you and
+          the team for a SCRUM style standup meeting, or you can have them
+          submit that weekly report of status in Ilearn. These reports are your
+          best tool for finding students whom you may need to reach out to. I
+          would grade both of these activities on completion. Feel free to dock
+          a few points on the notes if you feel they are putting in minimal
+          effort.
+        </p>
+        <p>
+          If you can make it work the synchronous meeting report is WAY more
+          effective than the Ilearn one. I highly recommend it if you can make
+          it work. It would involve a 10-15 minute appointment for each group
+          each week.
         </p>
         <p>
           You should plan on holding an office hour each week. Record this for
           those that can't make it. Use this time to answer any questions you
           find in the notes or that the students attending bring, and then work
           on a coding example illustrating skills from the readings. Each week
-          in the notes I'll give an example project...use mine or feel free to
-          come up with your own.
+          in the instructor notes I'll give an example project...use mine or
+          feel free to come up with your own.
         </p>
         <p>
           You may also consider preparing a short video introduction for each
@@ -96,7 +121,8 @@
           assess themselves on how well they have achieved the outcomes of the
           course, prepare a short video with their justifications, and then
           provide a portfolio of work to back up their claims. You should review
-          their marks and their submitted work and adjust as necessary.
+          their marks and their submitted work and adjust as necessary. A major
+          part of that portfolio should be their final team project.
         </p>
       </main>
       <!-- end #article -->
