--- a/teacher/week09.html
+++ b/teacher/week09.html
@@ -250,6 +250,11 @@ function loopy(ms) {
   renderer.render(scene);
 }</code></pre>
           </li>
+          <li>
+            A final challenge you might extend...have them open up the
+            <kbd>main-completed.js</kbd> file and see if they can follow the
+            code and figure out how it all works.
+          </li>
         </ol>
       </main>
       <!-- end #article -->
